# sdmserver

./: .gitignore  Cargo.toml  Dockerfile  README.md  agents.md  docker-compose.yaml
config/: config.json  downloads.json
src/: main.rs  state.rs
src/api/: download.rs  mod.rs
src/models/: download.rs  mod.rs
src/services/: downloader.rs
static/: app.js  index.html  style.css
